--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,20 @@
 p {
   font-family: Lato;
 }
+
+.container {
+  margin: auto;
+  /* width: 50%; */
+  max-width: 1500px;
+  padding-left: 50px;
+  padding-right: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.card {
+  padding: 5px;
+  margin-bottom: 20px;
+  /* border-bottom: 1px solid black; */
+  background-color: rgb(235, 235, 235);
+  border-radius: 2px;
+}
