--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,5 +16,10 @@ p {
   margin-bottom: 20px;
   /* border-bottom: 1px solid black; */
   background-color: rgb(235, 235, 235);
-  border-radius: 2px;
+  border-radius: 3px;
+}
+
+.info-card {
+  background-color: rgb(211, 211, 211);
+  border-radius: 1px;
 }
