--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,44 +1,98 @@
 <div class="container col-md-6">
 
-<!--Template Driven Form or Model Driven Form?-->
-<form [formGroup]="screeningForm" (ngSubmit)="onSubmit()">
-  <div>
-    <div class="form-group card col-md-6" *ngFor='let question of firstScreeningQestions'>
-      <div class="row">
-        <div>{{question.question}}</div>
-        <div>
-          <label class="md-check lead">
-          <input type="radio" formControlName="{{question.group}}" value="yes" name="{{question.group}}" />
-          Yes
-          </label>
-        </div>
-        <div>
-          <label class="md-check lead">
-          <input type="radio" formControlName="{{question.group}}" value="no" name="{{question.group}}" />
-          No
-          </label>
+  <!--Template Driven Form or Model Driven Form?-->
+  <form [formGroup]="screeningForm" (ngSubmit)="onSubmit()">
+    <div>
+
+      <div class="card info-card col-md-6">
+        <h2>Screening</h2>
+
+        <P>Below is a list of screening questions. Please be honest.</P>
+        <p>
+          First, are general yes or no screening questions.
+          Second, are common symptoms of anxiety.
+          Lastly, are questions consisting of depression statements.
+        </p>
+      </div>
+
+      <div class="form-group card col-md-6" *ngFor='let question of firstScreeningQestions'>
+        <div class="row">
+          <div>{{question.question}}</div>
+          <div>
+            <label class="md-check lead">
+        <input type="radio" formControlName="{{question.group}}" value="yes" name="{{question.group}}" />
+        Yes
+        </label>
+          </div>
+          <div>
+            <label class="md-check lead">
+        <input type="radio" formControlName="{{question.group}}" value="no" name="{{question.group}}" />
+        No
+        </label>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="form-group card col-md-6" *ngFor='let question of secondQuestionnaire'>
-      <div class="row">
-        <div>{{question.question}}</div>
-        <div *ngFor='let answer of question.answers'>
-          <label class="md-check lead">
-          <input type="radio" formControlName="{{question.group}}" value="{{answer.value}}" name="{{question.group}}" />
-          {{answer.answer}}
-          </label>
+      <div class="card info-card col-md-6">
+        <h2>Anxiety Inventory</h2>
+        <p>
+          Please carefully read each item in the list. Indicate how much you have been bothered by that symptom during
+          the past month, including today, by selecting the corresponding space in the column next to each symptom.
+        </p>
+      </div>
+
+      <div class="form-group card col-md-6" *ngFor='let question of secondQuestionnaire'>
+        <div class="row">
+          <div>{{question.question}}</div>
+          <div *ngFor='let answer of question.answers; let i = index'>
+            <label class="md-check lead">
+        <input type="radio" formControlName="{{question.group}}" value="{{i}}" name="{{question.group}}" />
+        {{answer}}
+        </label>
+          </div>
         </div>
       </div>
+
+      <div class="card info-card col-md-6">
+        <h2>Depression Inventory</h2>
+        <p>
+          Please read each group of statements carefully. And then pick out the statement in each group that best
+          describes the way you have been feeling during the past two weeks, including today. Circle the number beside
+          the statement you have picked. If several statements in the group seem to apply equally well, circle the
+          highest number for that group. Be sure than you do not choose more than one statement for any group, including
+          changes in sleeping pattern or changes in appetite.
+        </p>
+      </div>
+
+      <div class="form-group card col-md-6" *ngFor='let question of thirdQuestions'>
+        <div class="row">
+          <div>{{question.question}}</div>
+          <div *ngFor='let answer of question.answers; let i = index'>
+            <label class="md-check lead">
+          <input type="radio" formControlName="{{question.group}}" value="{{i}}" name="{{question.group}}" />
+          {{answer}}
+          </label>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group card col-md-6" *ngFor='let question of thirdQuestSpecial'>
+        <div class="row">
+          <div>{{question.question}}</div>
+          <div *ngFor='let answer of question.answers; let i = index'>
+            <label class="md-check lead">
+        <input type="radio" formControlName="{{question.group}}" value="j" name="{{question.group}}" />
+        {{answer.answer}}
+        </label>
+          </div>
+        </div>
+      </div>
+
+
     </div>
 
-
-
-  </div>
-
-  <button [disabled]='!screeningForm.valid' type="submit" class="btn btn-primary pull-right">
-    Submit
-  </button>
-</form>
+    <button [disabled]='screeningForm.valid' type="submit" class="btn btn-primary pull-right">
+  Submit
+</button>
+  </form>
 </div>
