--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -23,3 +23,9 @@ p {
   background-color: rgb(211, 211, 211);
   border-radius: 1px;
 }
+
+.highlight {
+  margin-top: 20px;
+  font-weight: 700;
+  text-decoration: underline;
+}
