--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,9 @@
 
       <div class="card info-card col-md-6">
         <h2>Screening</h2>
-
+        <P><u>
+            Questionnaire is fully confidential, anonymous, and we can't see individual responses.
+        </u></P>
         <P>Below is a list of screening questions. Please be honest.</P>
         <p>
           First, are general yes or no screening questions.
