--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
             Questionnaire is fully confidential, anonymous, and we can't see individual responses.
           </u></P>
         <P>Below is a list of screening questions. Please be honest.</P>
+        <P>You will get a code at the bottom of the form if you qualify.</P>
         <p>
           First, are general yes or no screening questions.
           Second, are common symptoms of anxiety.
